[project]
name = "weather-mcp"
version = "0.1.0"
description = "MCP server for weather information using Amap API"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]==1.9.3",
    "python-dotenv==1.0.0",
    "httpx==0.28.1",
    "pydantic==2.11.5",
    "pydantic-settings==2.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38" 